...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" text="" placeholder="Product Name" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hid-9i-1YA">
                                <rect key="frame" x="0.0" y="88" width="414" height="70"/>
                                <color key="backgroundColor" red="0.079277820890000003" green="0.68845605850000002" blue="0.2460487485" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_profile_image" translatesAutoresizingMaskIntoConstraints="NO" id="CQm-et-8nR">
                                        <rect key="frame" x="192" y="20.666666666666671" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="profile_image" label="profile_image">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                                <rect key="frame" x="26" y="130" width="362" height="32"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <accessibility key="accessibilityConfiguration" identifier="lastNameTextField" label="lastNameTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <textInputTraits key="textInputTraits" returnKeyType="done" textContentType="family-name"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vC5-RY-4Hn">
                                                <rect key="frame" x="346" y="13" width="48" height="22"/>
                                                <accessibility key="accessibilityConfiguration" identifier="editButton" label="editButton"/>
                                                <state key="normal" title="Edit" image="edit-pencil" backgroundImage="edit-button"/>
                                                <connections>
...
                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9lB-OS-LqF">
                                                <rect key="frame" x="212" y="605" width="40" height="45"/>
                                                <accessibility key="accessibilityConfiguration" identifier="saveButton" label="saveButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="45" id="xrI-ED-xeb"/>
...
