...
    var farmsData: [FarmsModel.Data]?
    let tableView = UITableView()
    let headerReuseId = "TableHeaderViewReuseId"
    
    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.accessibilityIdentifier = "myUniqueTableViewIdentifier"
        if CheckInternet.Connection(){
            if (ProductsTableViewController.farms_model.getFarmsData().count < 1 && ProductsTableViewController.products_model.getFruitData().count < 1){
        self.activityIndicator.startAnimating()
        DispatchQueue.main.asyncAfter(deadline: .now() + 3){
        
        let products_data = ProductsTableViewController.products_model.getVegetableData()
...
            data["prod_name"] = farms_name
            data["prod_index"]   = "\(index)"
            data["prod_description"] = farms_ratings //here description is same as farms ratings
            data["prod_items"] = farmsImagesUrl
        case 1:
            data["prod_ID"] = vegetablesID
            data["prod_type"] = "Vegetables"
            data["prod_name"] = type //here type is the name of vegetable
            data["prod_index"]   = "\(index)"
            data["prod_description"] = type_price // here description is vegetable price
            data["prod_items"] = imagesUrl
        case 2:
            data["prod_ID"] = fruitsID
...
